# double-hit-balls

./: .gitignore
assets/: SSAA_4X.frag  SSAA_4X.vertex  arial32.txt  bg_textures_config.json  color_fragment.txt  color_vertex.txt  config.json  galaxy_ptree.json  gui_alex.json  gui_game_pause_menu.json  gui_loading.json  gui_main_menu.json  level1.txt  level10.txt  level11.txt  level12.txt  level6.txt  level7.txt  level8.txt  level9.txt  lines.json  lines100500 div 2.json  lines100500.json  lucon12.txt  parallax_fragment.txt  parallax_vertex.txt  particle-shader.fragment  particle_effect_hint.json  simple_shading.fragment  simple_shading.vertex  simple_shading_no_tex.fragment  simple_shading_no_tex.vertex  sparkler.json  test.json  texture-shader.fragment  texture-shader.vertex
game/: Android.mk  Application.mk  DoubleHitBalls.dev  Sounds.cpp  Sounds.h  android_api.cpp  android_api.h  creditscode.cpp  creditscode.h  galaxy.cpp  galaxy.h  galaxy_menu.cpp  galaxy_menu.h  galaxy_objects.cpp  galaxy_objects.h  game_area_interface.h  gamecode.cpp  gamecode.h  level_interior.h  loadingcode.cpp  main_code.cpp  main_code.h  menucode.cpp  menucode.h
jni/: Android.mk  DoubleHitBalls.dev  android_api.cpp  android_api.h  creditscode.cpp  creditscode.h  game_area_interface.h  gamecode.cpp  gamecode.h  loadingcode.cpp  loadingcode.h  main_code.cpp  main_code.h  menucode.cpp  menucode.h
proj.android-studio/: build.gradle
proj.android-studio/app/: CMakeLists.txt  build.gradle
proj.android-studio/app/src/main/: AndroidManifest.xml
proj.android-studio/app/src/main/java/fishrungames/doublehitballs/: GL2JNIActivity.java  GLView.java  JniWrapper.java
proj.android-studio/app/src/main/java/fishrungames/doublehitballs/sounds/: JniSoundCalls.java  JniSoundCallsImpl.java
proj.ios/: AppDelegate.swift  BridgeDelegate.h  BridgeDelegate.mm  CustomGLKView.swift  LaunchScreen.storyboard  NativeSoundCalls.swift  NativeSoundCallsImpl.swift  SENamespaceWrapper.cpp  SENamespaceWrapper.h  SoundCalls.cpp  SoundCalls.h  SoundCalls.m  Sounds.h  Sounds.m  ViewController.swift  ios_api.cpp  (+3 more)
(+261 files in other folders)
